corrijo ruta de imagen en index

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Button from "../Components/Button.astro"
 import ButtonSecundary from "../Components/ButtonSecundary.astro";
 import ProyectoHome from "../Assets/Images/ProyectoHome.png";
 import ProyectoReta from "../Assets/Images/ProyectoReta.png";
-import Mythos from "../Assets/Images/Mythos.png";
+import mythos from "../Assets/Images/mythos.png";
 import github from "../Assets/Images/github.png";
 import fotoportfolio from "../Assets/Images/fotoportfolio.png";
 import fotoconfondo from "../Assets/Images/fotoconfondo.png";
@@ -131,7 +131,7 @@ lg:gap-32 items-center mb-24 lg:mt-24 lg:mb-24 lg:h-fit">
     <Card>
     <div slot="image"> 
     <Image 
-        src={Mythos} 
+        src={mythos} 
         alt="Descripción de la imagen"></Image>
     </div>
     <div slot="titulo">
