corrijo ruta de imagen en header

--- a/src/Components/Header.astro
+++ b/src/Components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from 'astro:assets'
 import '../styles/global.css'
-import Logoempresa from "../Assets/Images/Logoempresa.png";
+import LogoEmpresa from "../Assets/Images/LogoEmpresa.png";
 
 
 ---
@@ -12,7 +12,7 @@ import Logoempresa from "../Assets/Images/Logoempresa.png";
   <input type="checkbox" class="inset-0 opacity-0 cursor-pointer peer z-10">
 
   <!-- Tu imagen -->
-  <Image class="w-16 h-16 imagen" src={Logoempresa} alt="logo mapp"/>
+  <Image class="w-16 h-16 imagen" src={LogoEmpresa} alt="logo mapp"/>
 
   
 
