subo footer y public

--- a/src/Components/Footer.astro
+++ b/src/Components/Footer.astro
@@ -1,9 +1,5 @@
 ---
 
-import { Image } from "astro:assets";
-import github from "../assets/Images/github.png"
-import linkedin from "../assets/Images/linkedin.png"
-import gmail from "../Assets/Images/gmail.png"
 
 ---
 
@@ -18,9 +14,9 @@ import gmail from "../Assets/Images/gmail.png"
 
     <div class="flex justify-end gap-4 py-6 px-4">
     
-      <a href="mailto:mapp81dev@gmail.com" class="hover:text-blue-400 mr-12"><Image class="que" src={gmail} alt="Mail to" width={24} height={24} /></a>
-      <a href="https://github.com/Mapp81" class="hover:text-blue-400 mr-12"><Image src={github} alt="GitHub Profile" width={24} height={24} /></a>
-      <a href="https://linkedin.com/in/ana-peyran-8a52b937b" class="hover:text-blue-400 mr-12"><Image src={linkedin} alt="LinkedIn Profile" width={24} height={24} /></a>
+      <a href="mailto:mapp81dev@gmail.com" class="hover:text-blue-400 mr-12"><img src="/portfolio/public/gmail.png" alt="Gmail" /></a>
+      <a href="https://github.com/Mapp81" class="hover:text-blue-400 mr-12"><img src="/portfolio/public/github.png" alt="GitHub" /></a>
+      <a href="https://linkedin.com/in/ana-peyran-8a52b937b" class="hover:text-blue-400 mr-12"><img src="/portfolio/public/linkedin.png" alt="Linkedin" /></a>
     </div>
   
 
