subo la puta foto

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import ButtonSecundary from "../Components/ButtonSecundary.astro";
 import ProyectoHome from "../Assets/Images/ProyectoHome.png";
 import ProyectoReta from "../Assets/Images/ProyectoReta.png";
 import mythos from "../Assets/Images/mythos.png";
-import github from "../Assets/Images/github.png";
+import github from "/AnitaSecretCode/AnitaSecretCode/Porfolio Nuevo/portfolio/public/github.png";
 import fotoportfolio from "../Assets/Images/fotoportfolio.png";
 import fotoconfondo from "../Assets/Images/fotoconfondo.png";
 import logisticasalemi from "../Assets/Images/logisticasalemi.png";
