--- a/src/Components/Footer.astro
+++ b/src/Components/Footer.astro
@@ -14,9 +14,9 @@
 
     <div class="flex justify-end gap-4 py-6 px-4">
     
-      <a href="mailto:mapp81dev@gmail.com" class="hover:text-blue-400 mr-12"><img src="/portfolio/public/gmail.png" alt="Gmail" /></a>
-      <a href="https://github.com/Mapp81" class="hover:text-blue-400 mr-12"><img src="/portfolio/public/github.png" alt="GitHub" /></a>
-      <a href="https://linkedin.com/in/ana-peyran-8a52b937b" class="hover:text-blue-400 mr-12"><img src="/portfolio/public/linkedin.png" alt="Linkedin" /></a>
+      <a href="mailto:mapp81dev@gmail.com" class="hover:text-blue-400 mr-12"><img class="que" src="/gmail.png" alt="Gmail" width="24px" height="24px"/></a>
+      <a href="https://github.com/Mapp81" class="hover:text-blue-400 mr-12"><img src="/github.png" alt="GitHub" width="24px" height="24px"/></a>
+      <a href="https://linkedin.com/in/ana-peyran-8a52b937b" class="hover:text-blue-400 mr-12"><img src="/linkedin.png" alt="Linkedin" width="24px" height="24px"/></a>
     </div>
   
 
