--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -123,7 +123,7 @@ lg:gap-32 items-center mb-24 lg:mt-24 lg:mb-24 lg:h-fit">
     
     {/* 2. Enlace a GitHub (slot="githubLink") */}
     <a href="https://github.com/Mapp81/Home.git" slot="githubLink" class="hover:opacity-75 blank">
-        <Image src={github} alt="GitHub Profile" width={32} height={32} />
+       <img src="/github.png" alt="GitHub" width="24px" height="24px" />
     </a>
     </Card>
 
@@ -147,7 +147,7 @@ lg:gap-32 items-center mb-24 lg:mt-24 lg:mb-24 lg:h-fit">
     
     {/* 2. Enlace a GitHub (slot="githubLink") */}
     <a href="https://github.com/Mapp81/Mythos.git" slot="githubLink" class="hover:opacity-75 blank">
-        <Image src={github} alt="GitHub Profile" width={32} height={32} />
+        <img src="/github.png" alt="GitHub" width="24px" height="24px"/>
     </a>
     
 </Card>
@@ -172,7 +172,7 @@ lg:gap-32 items-center mb-24 lg:mt-24 lg:mb-24 lg:h-fit">
     
     {/* 2. Enlace a GitHub (slot="githubLink") */}
     <a href="https://github.com/Mapp81/Mythos.git" slot="githubLink" class="hover:opacity-75 blank">
-        <Image src={github} alt="GitHub Profile" width={32} height={32} />
+        <img src="/github.png" alt="GitHub" width="24px" height="24px"/>
     </a>
     </Card>
 
@@ -196,7 +196,7 @@ lg:gap-32 items-center mb-24 lg:mt-24 lg:mb-24 lg:h-fit">
     
     {/* 2. Enlace a GitHub (slot="githubLink") */}
     <a href="https://github.com/Mapp81/Logistica-Salemi-2025.git" slot="githubLink" class="hover:opacity-75 blank">
-        <Image src={github} alt="GitHub Profile" width={32} height={32} />
+        <img src="/github.png" alt="GitHub" width="24px" height="24px"/>
     </a>
     </Card>
  </div>  
