Comment out a div in index.astro
Comment out a div element for future reference.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -204,7 +204,7 @@ lg:gap-32 items-center mb-24 lg:mt-24 lg:mb-24 lg:h-fit">
 
 
 
-  <div class="flex items-center justify-center flex-wrap md:p-32 shadow-[0_4px_15px_rgba(255,255,255,0.08)]  p-6 bg-neutral-900 rounded-xs">4</div>
+  <!-- <div class="flex items-center justify-center flex-wrap md:p-32 shadow-[0_4px_15px_rgba(255,255,255,0.08)]  p-6 bg-neutral-900 rounded-xs">4</div> -->
 
 
 </div>
