actualizacion de links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -119,7 +119,7 @@ lg:gap-32 items-center mb-24 lg:mt-24 lg:mb-24 lg:h-fit">
       {/* ******* CONTENIDO DE LOS BOTONES (CORRECCIÓN) ******* */}
     
     {/* 1. Enlace al Sitio (slot="linkContent") */}
-    <a href="https://mythosdelmundo.netlify.app/" slot="linkContent" class="hover:text-blue-600 font-medium">Link</a> 
+    <a href="https://home-2abn.onrender.com" slot="linkContent" class="hover:text-blue-600 font-medium">Link</a> 
     
     {/* 2. Enlace a GitHub (slot="githubLink") */}
     <a href="https://github.com/Mapp81/Home.git" slot="githubLink" class="hover:opacity-75 blank">
@@ -192,7 +192,7 @@ lg:gap-32 items-center mb-24 lg:mt-24 lg:mb-24 lg:h-fit">
       {/* ******* CONTENIDO DE LOS BOTONES (CORRECCIÓN) ******* */}
     
     {/* 1. Enlace al Sitio (slot="linkContent") */}
-    <a href="https://mythosdelmundo.netlify.app/" slot="linkContent" class="hover:text-blue-600 font-medium">Link</a> 
+    <a href="https://logistica-salemi-2025.onrender.com" slot="linkContent" class="hover:text-blue-600 font-medium">Link</a> 
     
     {/* 2. Enlace a GitHub (slot="githubLink") */}
     <a href="https://github.com/Mapp81/Logistica-Salemi-2025.git" slot="githubLink" class="hover:opacity-75 blank">
@@ -204,7 +204,7 @@ lg:gap-32 items-center mb-24 lg:mt-24 lg:mb-24 lg:h-fit">
 
 
 
-  <div class="flex items-center justify-center flex-wrap md:p-32 shadow-[0_4px_15px_rgba(255,255,255,0.08)]  p-6 bg-neutral-900 rounded-xs">4</div>
+  <!-- <div class="flex items-center justify-center flex-wrap md:p-32 shadow-[0_4px_15px_rgba(255,255,255,0.08)]  p-6 bg-neutral-900 rounded-xs">4</div>-->
 
 
 </div>
