--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ lg:gap-32 items-center mb-24 lg:mt-24 lg:mb-24 lg:h-fit">
         </div> 
         <div>
             <p class="mb-8 max-w-[360px] leading-relaxed">
-                <span class="text-[#819edc] font-medium">Web developer</span>, enfocada en diseño <span class="underline font-medium">UX/UI</span>. Actualmente apostando por completo a <span class="text-[#819edc] font-medium">CSS + IA</span>, mejorando mis habilidades cada día. Desde Argentina <img src="https://flagcdn.com/w20/ar.png" alt="Bandera de Argentina" class="inline-block w-6 h-4 rounded-sm" />
+                <span class="text-[#819edc] font-medium">Web developer</span>, enfocada en diseño <span class="underline font-medium">UX/UI</span>. Actualmente apostando por completo a <span class="text-[#819edc] font-medium">código + AI workflow</span>, mejorando mis habilidades cada día. Desde Argentina <img src="https://flagcdn.com/w20/ar.png" alt="Bandera de Argentina" class="inline-block w-6 h-4 rounded-sm" />
             </p>
         </div>
         <div>
@@ -47,19 +47,19 @@ lg:gap-32 items-center mb-24 lg:mt-24 lg:mb-24 lg:h-fit">
 
   <section class="flex justify-center h-fit ">
   <div class="w-full flex-col lg:gap-8 lg:w-1/2 ">
-  <div class="flex flex-col justify-center items-start shadow-[0_4px_15px_rgba(255,255,255,0.08)] p-6 bg-neutral-900 mb-4 lg:mb-8 rounded-xs"> 
+  <div class="flex flex-col justify-center items-start shadow-[0_4px_15px_rgba(255,255,255,0.08)] p-10 lg:p-8 bg-neutral-900 mb-4 lg:mb-8 prueba"> 
     <h2 class="mb-2 text-2xl lg:text-3xl" id="sobremi">Sobre mí</h2>
     <p>
     Soy una desarrolladora web dedicada a crear sitios 
     <span class="text-[#819edc] font-medium">funcionales y centrados en el usuario</span>. 
     Combino una sólida base en 
     <span class="text-[#819edc] font-medium">diseño UX/UI</span> 
-    con una implementación de código limpia y eficiente. Además, domino animaciones y microinteracciones en CSS para aportar movimiento, vida y personalidad a cada proyecto. Me encanta aprender: todos los días estudio, experimento y uso <span class="text-[#819edc] font-medium">IA</span> como herramienta para ampliar mis conocimientos, mejorar mis procesos y potenciar mi creatividad.
+    con una implementación de código limpia y eficiente. Además, domino animaciones y microinteracciones para aportar movimiento, vida y personalidad a cada proyecto. Me encanta aprender: todos los días estudio, experimento y uso <span class="text-[#819edc] font-medium">IA</span> como herramienta para ampliar mis conocimientos, mejorar mis procesos y potenciar mi creatividad.
 </p>
 
   </div>
 
-  <div class="flex items-center justify-center flex-wrap mb-4 lg:mb-8 shadow-[0_4px_15px_rgba(255,255,255,0.08)]  p-6 lg:p-8 bg-neutral-900 rounded-xs" id="skills">
+  <div class="flex items-center justify-center flex-wrap mb-4 lg:mb-8 shadow-[0_4px_15px_rgba(255,255,255,0.08)] pl-12 pt-8 pb-4 lg:p-8 bg-neutral-900 pruebaa" id="skills">
     <div class="lg:w-[450px]">
     <div class="relative inline-flex items-center justify-center p-0.5 mb-2 me-2 overflow-hidden text-sm font-medium text-white-900 rounded-lg group bg-linear-to-br cursor-auto"> <span class="relative border-2 border-neutral-900 hover:border-(--light-primary-color) px-5 py-2.5 transition-all ease-in duration-75 rounded-md items-center gap-x-2 flex">  <svg class="size-8 lg:size-12" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 452 520"> <path fill="#e34f26" d="M41 460L0 0h451l-41 460-185 52"></path> <path fill="#ef652a" d="M226 472l149-41 35-394H226"></path> <path fill="#ecedee" d="M226 208h-75l-5-58h80V94H84l15 171h127zm0 147l-64-17-4-45h-56l7 89 117 32z"></path> <path fill="#fff" d="M226 265h69l-7 73-62 17v59l115-32 16-174H226zm0-171v56h136l5-56z"></path> </svg>
  </span> </div>
@@ -102,7 +102,7 @@ lg:gap-32 items-center mb-24 lg:mt-24 lg:mb-24 lg:h-fit">
   </div>
 
 
-<div class="flex flex-col lg:flex-row mb-4 lg:mb-8 p-6 lg:p-8 xl:p-8 2xl:p-8 bg-neutral-900 shadow-[0_4px_15px_rgba(255,255,255,0.08)] rounded-xs">
+<div class="flex flex-col lg:flex-row mb-4 lg:mb-8 p-6 lg:p-8 xl:p-8 2xl:p-8 bg-neutral-900 shadow-[0_4px_15px_rgba(255,255,255,0.08)] rounded-xs pruebaaa pruebaaaa">
   <div><h2 class="mb-2 text-2xl lg:text-3xl" id="proyectos">Proyectos</h2></div>
   <div class="flex items-center justify-center flex-wrap p-8">
   <Card>
@@ -239,7 +239,72 @@ lg:gap-32 items-center mb-24 lg:mt-24 lg:mb-24 lg:h-fit">
     var(--_g) calc(var(--_d) + var(--x)) 0,
     var(--_g) 0 calc(var(--_d) + var(--y));
   mask-repeat: no-repeat;
+  
+  
 }
+
+.prueba{
+  --r: 20px; /* the radius */
+  --s: 30px; /* size of inner curve */
+  --x: 20px; /* horizontal offset (no percentane) */
+  --y: 10px; /* vertical offset (no percentage) */
+  
+  
+  border-radius: var(--r);
+  --_m:/calc(2*var(--r)) calc(2*var(--r)) radial-gradient(#000 70%,#0000 72%);
+  --_g:conic-gradient(from 90deg at calc(100% - var(--r)) calc(100% - var(--r)),#0000 25%,#000 0);
+  --_d:(var(--s) + var(--r));
+  mask:
+    calc(100% - var(--_d) - var(--x)) 100% var(--_m),
+    100% calc(100% - var(--_d) - var(--y)) var(--_m),
+    radial-gradient(var(--s) at 100% 100%,#0000 99%,#000 calc(100% + 1px)) 
+     calc(-1*var(--r) - var(--x)) calc(-1*var(--r) - var(--y)),
+    var(--_g) calc(-1*var(--_d) - var(--x)) 0,
+    var(--_g) 0 calc(-1*var(--_d) - var(--y));
+  mask-repeat: no-repeat;}
+
+  .pruebaa{
+    --r: 20px; /* the radius */
+  --s: 30px; /* size of inner curve */
+  --x: 20px; /* horizontal offset (no percentage) */
+  --y: 10px; /* vertical offset (no percentage) */
+  
+  border-radius: var(--r);
+  --_m:/calc(2*var(--r)) calc(2*var(--r)) radial-gradient(#000 70%,#0000 72%);
+  --_g:conic-gradient(at var(--r) var(--r),#000 75%,#0000 0);
+  --_d:(var(--s) + var(--r));
+  mask:
+    calc(var(--_d) + var(--x)) 0 var(--_m),
+    0 calc(var(--_d) + var(--y)) var(--_m),
+    radial-gradient(var(--s) at 0 0,#0000 99%,#000 calc(100% + 1px)) 
+     calc(var(--r) + var(--x)) calc(var(--r) + var(--y)),
+    var(--_g) calc(var(--_d) + var(--x)) 0,
+    var(--_g) 0 calc(var(--_d) + var(--y));
+  mask-repeat: no-repeat;
+  }
+
+  .pruebaaa{
+    --r: 20px; /* the radius */
+  --s: 30px; /* size of inner curve */
+  --x: 20px; /* horizontal offset (no percentage) */
+  --y: 10px; /* vertical offset (no percentage) */
+  
+  border-radius: var(--r);
+  --_m:/calc(2*var(--r)) calc(2*var(--r)) radial-gradient(#000 70%,#0000 72%);
+  --_g:conic-gradient(at calc(100% - var(--r)) var(--r),#0000 25%,#000 0);
+  --_d:(var(--s) + var(--r));
+  mask:
+    calc(100% - var(--_d) - var(--x)) 0 var(--_m),
+    100% calc(var(--_d) + var(--y)) var(--_m),
+    radial-gradient(var(--s) at 100% 0,#0000 99%,#000 calc(100% + 1px)) 
+     calc(-1*var(--r) - var(--x)) calc(var(--r) + var(--y)),
+    var(--_g) calc(-1*var(--_d) - var(--x)) 0,
+    var(--_g) 0 calc(var(--_d) + var(--y));
+  mask-repeat: no-repeat;
+  }
+
+
+
   </style>
 
 
